syntax = "proto3";


option go_package = ".";

service ms1 {
  rpc SignUp(SignUpRequest) returns (SignUpResponse){}
  rpc SignIn(SignInRequest) returns (SignInResponse){}
  rpc UpdateRefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse){}
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  bool isCreated = 1;
}

message SignInRequest {
  string name = 1;
  string password = 2;
}

message SignInResponse {
  bool isLogin = 1;
}

message RefreshTokenRequest {
  string rt = 1;
}

message RefreshTokenResponse {
  bool isUpdated = 1;
}